# fvkit

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md
.github/workflows/: ci.yml
app/core/: BUILD.bazel  Cargo.toml  build.rs
app/core/src/: bazelrc.rs  config.rs  connections.rs  credstore.rs  identity.rs  ipc.rs  lib.rs  maintain.rs  notify.rs  oauth.rs  paths.rs  repos.rs  secretstore.rs  service.rs  tools.rs  update.rs  uri.rs  volume.rs
app/core/src/platform/: linux.rs  macos.rs
app/daemon/: BUILD.bazel  Cargo.toml
app/daemon/src/: auth.rs  main.rs  plugins.rs  sched.rs  server.rs
app/identity-cli/: BUILD.bazel  Cargo.toml
app/identity-cli/src/: main.rs
app/plugin-echo/: BUILD.bazel  Cargo.toml
app/plugin-echo/src/: main.rs
crates/fvkit-bazel/: BUILD.bazel  Cargo.toml
crates/fvkit-bazel/src/: bazelrc.rs  invoke.rs  lib.rs  maintain.rs  tools.rs  volume.rs
crates/fvkit-core/: BUILD.bazel  Cargo.toml  build.rs
crates/fvkit-core/src/: config.rs  connections.rs  credstore.rs  error.rs  identity.rs  ipc.rs  lib.rs  notify.rs  oauth.rs  service.rs  update.rs  uri.rs
crates/fvkit-core/src/platform/: macos.rs  mod.rs  windows.rs
proto/fastverk/identity/v1/: BUILD.bazel  auth.proto
proto/fastverk/plugin/v1/: BUILD.bazel  manifest.proto
proto/fastverk/v1/: BUILD.bazel  connection.proto  fvd.proto  maintenance.proto  repos.proto
