# fvkit — fastverk core/runtime Rust workspace.
#
# Two members:
#   - app/core/   — crate `fvkit` (lib): volumes, ~/.bazelrc, tool
#                   provisioning, connections/keychain/OAuth, maintenance,
#                   updater. The proto contract (fastverk.v1) is compiled by
#                   build.rs (tonic-build).
#   - app/daemon/ — crate `fvd` (bin): an unprivileged user-level gRPC server
#                   over a Unix socket wrapping fvkit.
#
# Builds with both `cargo build --workspace` and `bazel build //...`.

[workspace]
resolver = "2"
members = [
    "app/core",
    "app/daemon",
    "app/plugin-echo",
    "app/identity-cli",
]

[workspace.package]
version = "0.0.2"
edition = "2021"
rust-version = "1.95.0"
license = "MIT"
repository = "https://github.com/fastverk/fvkit"

[workspace.dependencies]
# gRPC server framework + protobuf codegen.
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"

# Async runtime.
tokio = { version = "1.40", features = ["full"] }
# `net` adds UnixListenerStream (fvd serves gRPC over a UDS).
tokio-stream = { version = "0.1", features = ["sync", "net"] }

# Common.
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# fastverk app (app/core fvkit): config dirs + TOML settings.
directories = "5.0"
toml = "0.8"
# Connection secrets in the OS keychain (macOS Keychain via apple-native).
keyring = { version = "3", features = ["apple-native"] }
# Desktop notifications attributed to the fastverk bundle (macOS). Posts via
# the bundle id so banners read "fastverk" rather than the osascript host.
mac-notification-sys = "0.6"
# OAuth device-code flow (blocking HTTP, rustls so there's no OpenSSL dep).
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
# PKCE (RFC 7636) for the OAuth authorization-code loopback flow: random
# verifier/state (getrandom), SHA-256 challenge (ring), base64url (base64).
# All three are already in the lock (transitive via reqwest/rustls).
base64 = "0.22"
getrandom = "0.2"
ring = "0.17"
# OIDC id_token signature verification (RS256 against the Cognito JWKS).
jsonwebtoken = "9.3"
# tonic gRPC client over a Unix socket (fvkit::ipc): the connector needs
# tower's service_fn + hyper-util's TokioIo (same versions tonic uses).
tower = { version = "0.5", features = ["util"] }
hyper-util = { version = "0.1", features = ["tokio"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
