# fvkit — fastverk core/runtime module.
#
# The platform-abstracted machinery the fastverk app is built on: managed
# filesystem volumes, ownership of the user's ~/.bazelrc, bazel(isk)
# provisioning, authenticated connections (host → keychain-backed token) with
# OAuth, periodic maintenance, and self-update. Modeled as a gRPC contract
# (`fastverk.v1`) + the `fvkit` library; the `fvd` daemon wraps it and is the
# single owner of mutable state.
#
# Rust-via-Cargo-AND-Bazel: the proto is compiled by build.rs (tonic-build)
# under a cargo_build_script, so the only Bazel codegen dep is protobuf (for
# protoc). The library is split into `fvkit-core` (platform-neutral substrate,
# owns the proto + version stamp) + `fvkit-bazel` (the ~/.bazelrc / tool / volume
# / maintenance surfaces), with `fvkit` (app/core) a re-export facade; `fvd`
# (bin, app/daemon) wraps the facade.
module(
    name = "fvkit",
    version = "0.0.8",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "protobuf", version = "33.4")

# Hermetic host C/C++ toolchain. Rust links through a cc toolchain, and without one
# bazel falls back to cc_autoconf, which shells out for `gcc` and hard-fails on the
# compiler-less images/ci base:
#   Auto-Configuration Error: Cannot find gcc or CC
# Declared INLINE and not via a shared module on purpose: toolchains_llvm's `llvm`
# extension hard-fails with "Only the root module can use the 'llvm' extension", so
# rules_cc_host (which wraps exactly this) cannot work as a bazel_dep — only the
# root module may declare it. LLVM 20.1.3 links libtinfo.so.6 (18.1.8's ubuntu-18.04
# prebuilt needs the .so.5 shim); pinned to the combo proven in aion/graph.
bazel_dep(name = "toolchains_llvm", version = "1.8.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(llvm_version = "20.1.3")
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.95.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension(
    "@rules_rust//crate_universe:extension.bzl",
    "crate",
    isolate = True,
)
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")

# Dev-only.
bazel_dep(name = "rules_shell", version = "0.6.1", dev_dependency = True)
