[package]
name = "fvkit"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "fastverk core: volumes, ~/.bazelrc, tool provisioning, connections/keychain/OAuth, maintenance, updater. Wrapped by fvd."

[lib]
name = "fvkit"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
directories.workspace = true
toml.workspace = true
keyring.workspace = true
reqwest.workspace = true

[build-dependencies]
tonic-build.workspace = true
