"""fvd — the fastverk daemon (gRPC over a Unix socket, wraps fvkit)."""

load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "fvd",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    deps = ["//app/core:fvkit"] + all_crate_deps(
        package_name = "app/daemon",
        normal = True,
    ),
)

exports_files(["Cargo.toml"])
